force-app/main/default/objects/Interface_Log__c/Interface_Log__c.object-meta.xml
<CustomObject>
    <label>Interface Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Interface Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>