force-app/main/default/objects/Interface_Log__c/fields/Dml_Option__c.field-meta.xml
<CustomField>
    <fullName>Dml_Option__c</fullName>
    <label>Dml Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>