force-app/main/default/objects/Interface_Log__c/fields/Interact_Content1__c.field-meta.xml
<CustomField>
    <fullName>Interact_Content1__c</fullName>
    <label>Request Data 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>