force-app/main/default/objects/Interface_Log__c/fields/Interact_Content__c.field-meta.xml
<CustomField>
    <fullName>Interact_Content__c</fullName>
    <label>Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>