force-app/main/default/objects/Interface_Log__c/fields/Interact_Date__c.field-meta.xml
<CustomField>
    <fullName>Interact_Date__c</fullName>
    <formula>DATEVALUE(Interact_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interact Date</label>
    <type>Date</type>
</CustomField>