force-app/main/default/objects/Interface_Log__c/fields/Interact_Time__c.field-meta.xml
<CustomField>
    <fullName>Interact_Time__c</fullName>
    <label>Interact Time</label>
    <type>DateTime</type>
</CustomField>