force-app/main/default/objects/Interface_Log__c/fields/Interface_URL__c.field-meta.xml
<CustomField>
    <fullName>Interface_URL__c</fullName>
    <label>Interface URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>