force-app/main/default/objects/Interface_Log__c/fields/Is_Part_Sucessful__c.field-meta.xml
<CustomField>
    <fullName>Is_Part_Sucessful__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Part Sucessful</label>
    <type>Checkbox</type>
</CustomField>