force-app/main/default/objects/Interface_Log__c/fields/log1__c.field-meta.xml
<CustomField>
    <fullName>log1__c</fullName>
    <label>Response Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>