force-app/main/default/objects/Interface_Log__c/fields/log2__c.field-meta.xml
<CustomField>
    <fullName>log2__c</fullName>
    <label>Response Data 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>