force-app/main/default/objects/Interface_Log__c/fields/recordID__c.field-meta.xml
<CustomField>
    <fullName>recordID__c</fullName>
    <label>recordID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>