force-app/main/default/objects/Interface_Log__c/fields/Request_System__c.field-meta.xml
<CustomField>
    <fullName>Request_System__c</fullName>
    <label>Request System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>