force-app/main/default/objects/Interface_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Request_System__c</columns>
    <columns>Destination_System__c</columns>
    <columns>Interact_Time__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Is_Part_Sucessful__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>recordID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>