force-app/main/default/objects/Interface_Log__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Request_System__c</columns>
    <columns>Destination_System__c</columns>
    <columns>Interact_Time__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Is_Part_Sucessful__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>recordID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Success__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>全部报错日志</label>
</ListView>