force-app/main/default/objects/Interface_Log__c/listViews/Inventory_Query.listView-meta.xml
<ListView>
    <fullName>Inventory_Query</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Request_System__c</columns>
    <columns>Destination_System__c</columns>
    <columns>Interact_Time__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>recordID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>equals</operation>
        <value>CRM查询SAP库存信息</value>
    </filters>
    <filters>
        <field>Interact_Time__c</field>
        <operation>equals</operation>
        <value>9/12/2025 12:00 AM</value>
    </filters>
    <label>CRM查询SAP库存信息</label>
</ListView>