force-app/main/default/objects/Interface_Log__c/listViews/SAP_AR.listView-meta.xml
<ListView>
    <fullName>SAP_AR</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Request_System__c</columns>
    <columns>Destination_System__c</columns>
    <columns>Interact_Content__c</columns>
    <columns>Interact_Time__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>recordID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>contains</operation>
        <value>应收</value>
    </filters>
    <label>SAP同步应收账款至CRM</label>
</ListView>