force-app/main/default/objects/Interface_Log__c/listViews/SAP_Delivery_Note_CRM.listView-meta.xml
<ListView>
    <fullName>SAP_Delivery_Note_CRM</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Request_System__c</columns>
    <columns>Destination_System__c</columns>
    <columns>Interact_Content__c</columns>
    <columns>Interact_Time__c</columns>
    <columns>Is_Success__c</columns>
    <columns>Is_Part_Sucessful__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>recordID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Description__c</field>
        <operation>equals</operation>
        <value>SAP同步发货单至CRM</value>
    </filters>
    <label>SAP同步发货单至CRM</label>
</ListView>